--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,40 @@
+azure-cognitiveservices-vision-computervision==0.9.0
+azure-common==1.1.28
+azure-core==1.30.2
 blinker==1.4
-bootstrap-flask==1.2.0
+Bootstrap-Flask==1.2.0
+certifi==2024.8.30
+charset-normalizer==3.3.2
 click==7.1.1
-flask-avatars==0.2.2
-flask-dropzone==1.5.4
-flask-login==0.5.0
-flask-mail==0.9.1
-flask-moment==0.9.0
-flask-sqlalchemy==2.4.1
+Faker==4.0.2
+Flask==1.1.2
+Flask-Avatars==0.2.2
+Flask-Dropzone==1.5.4
+Flask-Login==0.5.0
+Flask-Mail==0.9.1
+Flask-Moment==0.9.0
+Flask-SQLAlchemy==2.4.1
 flask-whooshee==0.7.0
-flask-wtf==0.14.3
-flask==1.1.2
+Flask-WTF==0.14.3
+idna==3.8
+isodate==0.6.1
 itsdangerous==1.1.0
-jinja2==2.11.1
-markupsafe==1.1.1
-pillow==7.1.1
-python-dotenv==0.12.0
-sqlalchemy==1.3.15
-werkzeug==1.0.1
-whoosh==2.7.4
-wtforms==2.2.1
-# dev
-faker==4.0.2
+Jinja2==2.11.1
+MarkupSafe==1.1.1
+msrest==0.7.1
+oauthlib==3.2.2
 pathtools==0.1.2
+pillow==10.4.0
 python-dateutil==2.8.1
+python-dotenv==0.12.0
+requests==2.32.3
+requests-oauthlib==2.0.0
 six==1.14.0
+SQLAlchemy==1.3.15
 text-unidecode==1.3
+typing_extensions==4.12.2
+urllib3==2.2.2
 watchdog==0.10.2
-azure-cognitiveservices-vision-computervision
+Werkzeug==1.0.1
+Whoosh==2.7.4
+WTForms==2.2.1
